added new features

--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
         <img class="ostrich-game-start" src="./img/ostrich-head-up.png" alt="ostrich-head-up">
         <h1>Game name</h1>
         <span>Press the space button to jump.</span>
-        <span>Press the button below to start the game.</span>
+        <span>Avoid eggs and try to pass through the grass!</span>
+        <span class="button-info">Press the button below to start the game.</span>
         <button class="btn btn-start">Start</button>
     </div>
     <div class="game" id="game">
+        <audio class="audio" src="./If_I_Had_a_Chicken copy.mp3"></audio>
         <div class="egg-small"></div>
         <div class="egg-big"></div>
-        <img class="sun-img" src="./img/sun-moon.png" alt="sun">
+        <img class="grass" src="./img/grass.png" alt="grass">
+        <img class="moon-img" src="./img/moon.png" alt="moon">
+        <img class="sun-img" src="./img/sun.png" alt="sun">
         <img class="ostrich-standing" src="./img/ostrich-game.png" alt="ostrich">
         <img class="ostrich-moving hidden" src="./img/ostrich.gif" alt="ostrich">
-        <!-- <span class="lives">
-            <i class="fas fa-heart"></i> 3</span> -->
+        <i class="fas fa-heart"></i>
+        <span class="lives"> 3</span>
         <span class="result">POINTS: 0</span>
         <div class="city-img"></div>
     </div>
