--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
         <img class="ostrich-game-start" src="./img/ostrich-head-up.png" alt="ostrich-head-up">
         <h1>Game name</h1>
         <span>Press the space button to jump.</span>
-        <span>Gather all the eggs and avoid the grass!</span>
+        <span>Gather all the eggs and don't pass through the grass!</span>
         <span class="button-info">Press the button below to start the game.</span>
         <button class="btn btn-start">Start</button>
     </div>
     <div class="game" id="game">
-        <audio class="audio" src="./If_I_Had_a_Chicken copy.mp3"></audio>
-        <img class="grass-big" src="./img/grass-big.png" alt="big-grass">
-        <img class="grass-small" src="./img/grass.png" alt="small-grass">
         <div class="egg"></div>
+        <img class="grass-thin" src="./img/grass-thin.png" alt="thin-grass">
+        <img class="grass-big" src="./img/grass-big.png" alt="big-grass">
+        <img class="grass-big-second" src="./img/grass-big.png" alt="big-grass">
+        <img class="grass-small" src="./img/grass.png" alt="small-grass">
         <img class="moon-img" src="./img/moon.png" alt="moon">
         <img class="sun-img" src="./img/sun.png" alt="sun">
         <img class="ostrich-standing" src="./img/ostrich-game.png" alt="ostrich">
         <img class="ostrich-moving hidden" src="./img/ostrich.gif" alt="ostrich">
+        <img class="ostrich-down hidden" src="./img/game-over.gif" alt="ostrich-head-down">
         <div>
             <i class="fas fa-heart"></i>
             <span class="lives"> 3</span>
