--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <title>Game</title>
+    <title>HAPPY BIRD</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -17,9 +17,9 @@
 
     <div class="start-screen">
         <img class="ostrich-game-start" src="./img/ostrich-head-up.png" alt="ostrich-head-up">
-        <h1>Game name</h1>
+        <h1>Happy bird</h1>
         <span>Press the space button to jump.</span>
-        <span>Gather all the eggs and don't pass through the grass!</span>
+        <span>Gather the eggs to get more lives, avoid the grass!</span>
         <span class="button-info">Press the button below to start the game.</span>
         <button class="btn btn-start">Start</button>
     </div>
@@ -27,7 +27,7 @@
         <div class="egg"></div>
         <img class="grass-thin" src="./img/grass-thin.png" alt="thin-grass">
         <img class="grass-big" src="./img/grass-big.png" alt="big-grass">
-        <img class="grass-big-second" src="./img/grass-big.png" alt="big-grass">
+        <img class="grass-big-second" src="./img/grass-big-second.png" alt="big-grass">
         <img class="grass-small" src="./img/grass.png" alt="small-grass">
         <img class="moon-img" src="./img/moon.png" alt="moon">
         <img class="sun-img" src="./img/sun.png" alt="sun">
