--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <img class="grass-big" src="./img/grass-big.png" alt="big-grass">
         <img class="grass-big-second" src="./img/grass-big-second.png" alt="big-grass">
         <img class="grass-small" src="./img/grass.png" alt="small-grass">
+        <img class="grass-double" src="./img/grass-double.png" alt="double-grass">
         <img class="moon-img" src="./img/moon.png" alt="moon">
         <img class="sun-img" src="./img/sun.png" alt="sun">
         <img class="ostrich-standing" src="./img/ostrich-game.png" alt="ostrich">
