--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <img class="grass-thin" src="./img/grass-thin.png" alt="thin-grass">
         <img class="grass-big" src="./img/grass-big.png" alt="big-grass">
         <img class="grass-big-second" src="./img/grass-big-second.png" alt="big-grass">
+        <img class="desert" src="./img/desert.png" alt="desert">
+        <img class="tree" src="./img/tree.png" alt="desert">
         <img class="grass-small" src="./img/grass.png" alt="small-grass">
         <img class="grass-double" src="./img/grass-double.png" alt="double-grass">
         <img class="moon-img" src="./img/moon.png" alt="moon">
