--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
     <div class="game" id="game">
         <div class="egg"></div>
+        <img class="tree" src="./img/tree.png">
         <img class="grass-thin" src="./img/grass-thin.png" alt="thin-grass">
         <img class="grass-big" src="./img/grass-big.png" alt="big-grass">
         <img class="grass-big-second" src="./img/grass-big-second.png" alt="big-grass">
