--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
     <div class="game" id="game">
         <div class="egg"></div>
-        <img class="grass-thin" src="./img/grass-thin.png" alt="thin-grass">
-        <img class="grass-big" src="./img/grass-big.png" alt="big-grass">
-        <img class="grass-big-second" src="./img/grass-big-second.png" alt="big-grass">
-        <img class="grass-small" src="./img/grass.png" alt="small-grass">
-        <img class="grass-double" src="./img/grass-double.png" alt="double-grass">
+        <img class="plastic" src="./img/plastic.png" alt="thin-grass">
+        <img class="plastic-1" src="./img/plastic-1.png" alt="big-grass">
+        <img class="plastic-2" src="./img/plastic-2.png" alt="big-grass">
+        <img class="plastic-3" src="./img/plastic-3.png" alt="plastic">
+        <img class="plastic-4" src="./img/plastic-4.png" alt="double-grass">
         <img class="moon-img" src="./img/moon.png" alt="moon">
         <img class="sun-img" src="./img/sun.png" alt="sun">
         <img class="ostrich-standing" src="./img/ostrich-game.png" alt="ostrich">
