--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
     <div class="start-screen">
-        <img class="ostrich-game-start" src="./img/ostrich-head-up.png" alt="ostrich-head-up">
-        <h1>Happy bird</h1>
-        <span>Press the space button to jump.</span>
-        <span>Gather the eggs to get more lives, avoid the grass!</span>
+        <img class="ostrich-game-start" src="./img/naruto.gif" alt="ostrich-head-up">
+        <h1>Naruto Run Climate Change</h1>
+        <span>Press the space button to plant trees.</span>
+        <span>Plant the trees on the desert to get more lives! Pick all the rubbish</span>
         <span class="button-info">Press the button below to start the game.</span>
         <button class="btn btn-start">Start</button>
     </div>
@@ -30,9 +30,9 @@
         <img class="plastic-2" src="./img/plastic-2.png" alt="big-grass">
         <img class="plastic-3" src="./img/plastic-3.png" alt="plastic">
         <img class="plastic-4" src="./img/plastic-4.png" alt="double-grass">
-        <img class="ostrich-standing" src="./img/ostrich-game.png" alt="ostrich">
-        <img class="ostrich-moving hidden" src="./img/ostrich.gif" alt="ostrich">
-        <img class="ostrich-down hidden" src="./img/game-over.gif" alt="ostrich-head-down">
+        <img class="ostrich-standing" src="./img/naruto.gif" alt="ostrich">
+        <img class="ostrich-moving hidden" src="./img/naruto.gif" alt="ostrich" id="naruto">
+        <img class="ostrich-down hidden" src="./img/naruto.gif" alt="ostrich-head-down">
         <div>
             <i class="fas fa-heart"></i>
             <span class="lives"> 30</span>
@@ -41,7 +41,7 @@
         <div class="city-img"></div>
     </div>
     <div class="game-over" id="game-over">
-        <img class="ostrich-game-over" src="./img/ostrich-head-down.png" alt="ostrich-head-down">
+        <img class="ostrich-game-over" src="./img/naruto.gif" alt="ostrich-head-down">
         <h1>Game over</h1>
         <span class="final-result">POINTS: 0</span>
         <span>Press the button below to restart the game.</span>
