rename to Climate Run

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <title>HAPPY BIRD</title>
+    <title>Climate Run</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -17,7 +17,7 @@
 
     <div class="start-screen">
         <img class="ostrich-game-start" src="./img/naruto.gif" alt="ostrich-head-up">
-        <h1>Naruto Run Climate Change</h1>
+        <h1>Climate Run</h1>
         <span>Press the space button to plant trees.</span>
         <span>Plant the trees on the desert to get more lives! Pick all the rubbish</span>
         <span class="button-info">Press the button below to start the game.</span>
